	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: FIXED arithmetics when setting HW timer
	(used 32-bit operations, storing result only into 64-bit which let
	the result be truncated and way too small).

	Added per-PV unmatched timestamp counters.

	Added some more debugging code (to be removed eventually).

	20100401 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Read fast data from FCOM (1st shot at things).

	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Use timestamp returned by evrTimeGetFromPipeline()
	as a reference that must be matched by all PVs.
	Rather than memcmp()ing timestamps: check their pulse ID and verify
	that the timestamps match within a few minutes.

	20100326 (Till Straumann):

	* BLDApp/src/bldget.c, BLDApp/src/Makefile: Added test program
	to receive and dump BLD packet.

	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h,
	BLDApp/src/devBLDMcastStatus.c: Removed little-endian copy of
	ebeamInfo as well as memcpy that initialized it.
	ebeamInfo is now maintained in LE format directly and we use
	(hopefully) more efficient ways to byteswap.

	* BLDApp/src/BLDMCast.c, BLDApp/src/Makefile: replaced hardcoded
	IP address of MC interface by 'getenv("IPADDR1")'. IPADDR1 can be set
	via fcomUtil so we added fcomUtil to the included dbds and libs.

	20100325 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Removed 'ca_add_event' -- 'ca_add_array_event'
	works for a single element, too (and ca_add_event is just a macro mapping
	to the ca_add_array_event).

	Replaced per-PV 'dataAvailable' flag by a global bitset which can be
	tested more efficiently.

	Restructured some #ifdefs so that {} are always balanced (helps
	the editor).

	Replaced explicit pulse ID calculation by 'official' PULSEID() macro
	from event module.

	* BLDApp/src/BLDMCast.h: Replaced 'unsigned int' and 'double' by
	more portable epicsUInt32 / epicsFloat64.

	* BLDApp/src/devBLDMcastStatus.c: Removed pre-3.14 #ifdefed stuff.